# targ

./: .clang-format  .clangd  CMakeLists.txt  README.md  test.cpp
cmake/: Config.cmake.in
include/: targ.hpp  targ_aliases.hpp  targ_arg.hpp  targ_default_handlers.hpp  targ_definition.hpp  targ_format.hpp  targ_handler.hpp  targ_hash_literal.hpp  targ_match.hpp  targ_matcher.hpp  targ_type_traits.hpp
include/targ/: targ.hpp  targ_default_handlers.hpp  targ_definition.hpp  targ_handler.hpp  targ_hash_literal.hpp  targ_matcher.hpp
src/examples/: consteval.cpp  extensive.cpp
